# ntransformer

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  EXPERIMENT.md  GPU_NVME_DIRECT_INTEGRATION.md  README.md
docs/: BLACKWELL_OPTIMIZATIONS.md  DEVELOPMENT.md  EXPERIMENT.md  GPU_NVME_DIRECT_INTEGRATION.md  INFERENCE_PIPELINE.md  OPTIMIZATIONS.md  QUANTIZATION.md  TIERED_CACHING.md
docs/research/: R1_delta_streaming.md  R2_sparse_ffn.md  R3_predictive_skip.md  README.md  literature_survey.md
include/: ntransformer.h
scripts/: benchmark.sh  restore_nvme.sh  setup_nvme.sh  setup_system.sh
src/: main.cpp
src/core/: allocator.cpp  allocator.h  device.cu  device.h  tensor.cpp  tensor.h  types.h
src/cuda/: attention.cu  elementwise.cu  gemm.cu  kernels.h  rmsnorm.cu  rotary.cu  softmax.cu  tma_copy.cuh
src/inference/: engine.cpp  engine.h  tokenizer.cpp  tokenizer.h
src/memory/: streamer.cu  streamer.h
src/model/: attention.cpp  attention.h  config.cpp  ffn.cpp  ffn.h  loader.cpp  loader.h  norm.cpp  norm.h  transformer.cpp  transformer.h
src/utils/: logger.h  profiler.cpp  profiler.h  timer.h
tests/: test_gemm.cpp  test_nvme_layer.cu  test_tensor.cpp
tools/: decompose_gguf.py
